--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,19 +23,22 @@
             android:layout_height="wrap_content"
             android:text="@string/str_butline"
             android:textAppearance="?android:textAppearanceLarge"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:onClick="drawShape"/>
         <Button
             android:id="@+id/but_rect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/str_butline"
-            android:textAppearance="?android:textAppearanceLarge"/>
+            android:textAppearance="?android:textAppearanceLarge"
+            android:onClick="drawShape"/>
         <Button
             android:id="@+id/but_circle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/str_butline"
-            android:textAppearance="?android:textAppearanceLarge"/>
+            android:textAppearance="?android:textAppearanceLarge"
+            android:onClick="drawShape/>
 
     </LinearLayout>
     <LinearLayout
